--- a/TauriApp/src-tauri/Cargo.toml
+++ b/TauriApp/src-tauri/Cargo.toml
@@ -18,10 +18,11 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["tray-icon", "image-png"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-fs = "2.4.5"
 tauri-plugin-dialog = "2.6.0"
+tauri-plugin-window-state = "2.4.1"
 
